# nsweekly

./: CMakeLists.txt  README.adoc
src/: app.cpp  app.hpp  app_test.cpp  auth.cpp  auth.hpp  auth_mock.hpp  auth_test.cpp  config.cpp  config.hpp  data.cpp  data.hpp  data_test.cpp  database.cpp  database.hpp  database_test.cpp  error.hpp  http_client.cpp  http_client.hpp  http_client_mock.cpp  http_client_mock.hpp  http_client_test.cpp  main.cpp  test_utils.hpp  url.cpp  url.hpp  url_test.cpp  utils.hpp  utils_test.cpp  weekly.cpp  weekly.hpp
statics/: preview.js  style.css
templates/: edit.html  head.html  index.html  nav.html  weeklies.html  weekly.html
